--- a/NAMESPACE
+++ b/NAMESPACE
@@ -31,3 +31,5 @@ importFrom(zoo,as.yearmon)
 importFrom(zoo,as.yearqtr)
 importFrom(zoo,as.zooreg)
 importFrom(zoo,zoo)
+importFrom(zoo,as.zoo)
+importFrom(zoo,as.xts)
