--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,6 +19,8 @@ importFrom(httr,POST)
 importFrom(httr,add_headers)
 importFrom(httr,content)
 importFrom(httr,content_type)
+importFrom(httr,http_error)
+importFrom(httr,http_status)
 importFrom(jsonlite,toJSON)
 importFrom(lubridate,day)
 importFrom(lubridate,month)
